# lift-cam-body-count

./: .env.example  .gitignore  README.md  cam-capture.py  lift_cams.json  logging_config.py  main.py  person-detect.py  pyproject.toml
